Fix: Correcciones ortográficas

--- a/res/Chi-Cuadrado.html
+++ b/res/Chi-Cuadrado.html
@@ -357,8 +357,8 @@ display: none;
 </div>
 
 
-<div id="impotación-de-paquetes" class="section level2">
-<h2>Impotación de paquetes</h2>
+<div id="importación-de-paquetes" class="section level2">
+<h2>Importación de paquetes</h2>
 <pre class="r"><code>library(readr)
 library(tidyverse)</code></pre>
 <pre><code>## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
